--- a/css/dosColumnas.css
+++ b/css/dosColumnas.css
@@ -41,3 +41,18 @@ body{
   background-color: blanchedalmond;
 }
 
+img.pequeña{
+  width: 200px; height: 200px;
+  
+}
+img.mediana{
+  width: 300px; height: 300px;
+  padding: 2%;
+  object-fit: cover;
+}
+img.icono{
+  width: 80px; height: 80px;
+  object-fit: cover;
+  display: inline-block;
+}
+
