--- a/css/reglas.css
+++ b/css/reglas.css
@@ -1,6 +1,6 @@
 h1, h2, h3{
 
-    color: #8a8e27;
+    color: black;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif
 }
@@ -10,8 +10,4 @@ text-align: justify
 
 }
 
-img{
-    width: 200px ;
-    height: 200px ;
-    object-fit: cover;
-}
+
