--- a/css/tresColumnas.css
+++ b/css/tresColumnas.css
@@ -57,3 +57,19 @@
   border-style: groove;
   background-color: blanchedalmond;
 }
+
+img.pequeña{
+    width: 200px; height: 200px;
+    
+  }
+  img.mediana{
+    width: 300px; height: 300px;
+    padding: 2%;
+    object-fit: cover;
+  }
+  img.icono{
+    width: 80px; height: 80px;
+    object-fit: cover;
+    
+  }
+  
