--- a/css/dosColumnas.css
+++ b/css/dosColumnas.css
@@ -1,3 +1,8 @@
+*{
+  /*margin: 1px;*/
+  
+}
+
 #contenedor {
     margin: 10px 10px 10px 10px ;
     padding: 5px;
@@ -53,6 +58,5 @@ img.mediana{
 img.icono{
   width: 80px; height: 80px;
   object-fit: cover;
-  display: inline-block;
 }
 
